include_directories(./include)
include_directories(${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})

add_library(PQ SHARED ./src/pq.cpp ./src/pq_util.cu)
set_target_properties(PQ PROPERTIES CUDA_ARCHITECTURES "50;60;70;80")
target_link_libraries(PQ common_utils)
target_link_libraries(PQ common_utils_cuda)
target_link_libraries(PQ k-means_II)
target_link_libraries(PQ mini_batch_k-means)
target_link_libraries(PQ OpenMP::OpenMP_CXX)

add_executable(test_cuda_asym_dis ./test/test_cuda_asym_dis.cu)
target_link_libraries(test_cuda_asym_dis PQ)
set_target_properties(test_cuda_asym_dis PROPERTIES CUDA_ARCHITECTURES "50;60;70;80")
add_test(NAME test_cuda_asym_dis COMMAND test_cuda_asym_dis)

add_executable(test_pq_build ./test/test_pq_build.cu)
target_link_libraries(test_pq_build PQ)
set_target_properties(test_pq_build PROPERTIES CUDA_ARCHITECTURES "50;60;70;80")
add_test(NAME test_pq_build COMMAND test_pq_build)

add_executable(test_query ./test/test_query.cu)
target_link_libraries(test_query PQ)
set_target_properties(test_query PROPERTIES CUDA_ARCHITECTURES "50;60;70;80")
add_test(NAME test_query COMMAND test_query)

add_executable(test_pq_query ./test/test_pq_query.cu)
target_link_libraries(test_pq_query PQ)
set_target_properties(test_pq_query PROPERTIES CUDA_ARCHITECTURES "50;60;70;80")
add_test(NAME test_pq_query COMMAND test_pq_query)